Undid changes for Heroku