@@ -6,7 +6,6 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Scope;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.springframework.beans.factory.config.BeanDefinition.SCOPE_PROTOTYPE;
@@ -17,11 +16,13 @@ public class ApplicationConfig {
     @Bean
     @Scope(SCOPE_PROTOTYPE)
     public List<Guitar> guitars() {
-        return Arrays.asList(
-                new Guitar("Fender", "Telecaster", 1650.00),
-                new Guitar("Fender", "Stratocaster", 1750.00),
-                new Guitar("Gibson", "Les Paul", 2250.00)
+        return new ArrayList<>(
+                List.of(
+                        new Guitar("Fender", "Telecaster", 1650.00),
+                        new Guitar("Fender", "Stratocaster", 1750.00),
+                        new Guitar("Gibson", "Les Paul", 2250.00)
 
+                )
         );
     }
 }
